style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 100%;
    height: 100vh;
    font-family: "Alata", sans-serif;
    font-weight: 400;
    overflow-x: hidden;
}

::selection {
    color: white;
    background-color: #ED3923;
}

/* ========== COMPONENTS ========== */

h1 {
    font-family: "Bevan", serif;
    font-size: 8rem;
    font-weight: 400;
    font-style: italic;
    text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
}

h2 {
    font-weight: 400;
    text-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
}

button {
    background-color: transparent;
    border: none;
    outline: none;
    font-family: "Alata", sans-serif;
    font-weight: 400;
    cursor: pointer;
    transition: transform 300ms;
}

button:hover {
    transform: scale(1.05);
}

button.button-underline {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.button-underline span {
    display: block;
    width: 110%;
    height: 8px;
    background-color: #ed3b23AA;
    margin-bottom: -25px;
}

a {
    color: black;
    text-decoration: none;
    cursor: pointer;
    transition: transform 300ms;
}

a:hover {
    transform: scale(1.05);
}

/* ========== COMPONENT MEDIA QUERIES ========== */

@media only screen and (max-width: 850px) {
    h1 {
        font-size: 6rem;
    }
}

@media only screen and (max-width: 700px) {
    h1 {
        font-size: 4.5rem;
    }

    h2 {
        font-size: 1.1rem;
    }
}

@media only screen and (max-width: 500px) {
    h1 {
        font-size: 3.5rem;
    }

    h2 {
        font-size: 1rem;
    }
}

@media only screen and (max-width: 400px) {
    h1 {
        font-size: 3.25rem;
    }
}

@media only screen and (max-width: 300px) {
    h1 {
        font-size: 3rem;
    }
}

/* ========== HEADER ========== */

header {
    background-color: white;
    height: 50px;
    width: 100%;
    padding: 0px 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 10;
    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
}

header #links {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 150px;
}

header .link-item {
    border-radius: 50%;
    width: 32px;
    height: 32px;
    background-color: black;
    display: flex;
    justify-content: center;
    align-items: center;
}

header .link-item i {
    color: white;
}

header h2 {
    padding-right: 100px;
    font-weight: 500;
    font-size: 1.75rem;
    text-align: center;
    text-shadow: none;
}

/* ========== HEADER MEDIA QUERIES ========== */

@media only screen and (max-width: 750px) {
    header h2 {
        padding-right: 50px;
    }
}

@media only screen and (max-width: 550px) {
    header h2 {
        padding-right: 0px;
    }
}

@media only screen and (max-width: 500px) {
    header {
        height: 90px;
        flex-direction: column;
        padding: 15px 15px;
        padding-bottom: 25px;
    }

    header #menu-button {
        position: fixed;
        top: 25px;
        right: 25px;
    }
}

/* ========== NAVIGATION ========== */

nav {
    position: fixed;
    top: 0;
    left: 100%;
    background-color: white;
    width: 100%;
    height: 100%;
    z-index: 10;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    transition: left 600ms;
}

nav button#exit {
    position: fixed;
    top: 25px;
    right: 25px;
    display: none;
}

nav h1 {
    text-shadow: none;
    font-size: 6.5rem;
}

#contact-link h1 {
    color: white;
    -webkit-text-stroke-color: #ED3923;
    -webkit-text-stroke-width: 5px;
}

/* ========== NAVIGATION MEDIA QUERIES ========== */

@media only screen and (max-width: 850px) {
    nav h1 {
        font-size: 5rem;
    }

    #contact-link h1 {
        -webkit-text-stroke-width: 3px;
    }
}

@media only screen and (max-width: 700px) {
    nav h1 {
        font-size: 4rem;
    }

    #contact-link h1 {
        -webkit-text-stroke-width: 2px;
    }
}

@media only screen and (max-width: 500px) {
    nav h1 {
        font-size: 3rem;
    }
}

@media only screen and (max-width: 400px) {
    nav h1 {
        font-size: 2.5rem;
    }
}

@media only screen and (max-width: 300px) {
    nav h1 {
        font-size: 2rem;
    }
}

/* ========== THE LATEST SECTION ========== */

main {
    height: 100%;
    overflow: hidden;
    position: relative;
}

main video {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

main #main-overlay {
    background-color: rgba(0, 0, 0, 0.55);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 5;
}

main #main-overlay h1 {
    color: white;
    margin-bottom: -25px;
}

main #main-overlay h2 {
    color: white;
    text-align: center;
}

/* ========== THE LATEST MEDIA QUERIES ========== */

@media only screen and (max-width: 500px) {
    main #main-overlay h2 {
        margin-top: 15px;
    }
}

@media only screen and (max-width: 450px) {
    main #main-overlay h2 {
        width: 65%;
    }
}

/* ========== ABOUT ME SECTION ========== */

section#about {
    background-color: white;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

#about #img-container {
    width: 400px;
    height: 600px;
    border-radius: 25px;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
    margin-right: 5%;
}

#about img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 25px;
}

#about #about-text {
    width: 60%;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    flex-direction: column;
}

#about #about-text h1 {
    text-shadow: none;
    width: 150%;
}

#about #about-text strong {
    font-size: 1.5rem;
    font-style: italic;
}
/* ... */

